# pyopl

./: .gitignore  LICENSE.txt  MANIFEST.in  NL4OPT.py  NLP4LP.py  README.md  RHETOR.md  _sparse_example.py  examples.py  genai_benchmark.py  genai_modelling.py  generative_modelling.py  line_count.py  pyproject.toml  requirements.txt  test_logger.py
docs/: PyOPL examples overview.md  PyOPL grammar.md  PyOPL user guide.md
pyopl/: __init__.py  __main__.py  _pyopl_mcp.py  _rhetor_mcp.py  genai_pricing.py  gurobi_codegen.py  linear_problem.py  linear_problem_highs.py  milp_equivalence.py  pyopl_chain_of_experts.py  pyopl_chain_of_experts.pyi  pyopl_chain_of_thought.py  pyopl_chain_of_thought.pyi  pyopl_cli.py  pyopl_core.py  pyopl_generative.py  pyopl_generative_gemini.py  pyopl_generative_ollama.py  pyopl_generative_openai.py  pyopl_ide_bootstrap.py  pyopl_mcp.py  pyopl_reflexion.py  pyopl_reflexion.pyi  pyopl_standard.py  pyopl_standard.pyi  pyopl_tree_of_thoughts.py  pyopl_tree_of_thoughts.pyi  rag_helper.py  rhetor_mcp.py  scipy_codegen.py  scipy_codegen_base.py  scipy_codegen_csc.py  semantic_error.py  tuple_set_helper.py
test/: test_bool_composite_aux_reuse.py  test_bool_equality_aux_reuse.py  test_boolean_mixed_trees.py  test_boolean_semantic_safety.py  test_cli.py  test_core_codegen_coverage.py  test_dat_nested_tuples.py  test_dexpr.py  test_genai_benchmark_continue.py  test_genai_helpers.py  test_generic_indicator_compile.py  test_handle_binop_cmp.py  test_implication_bigM.py  test_implication_equality_antecedent.py  test_implication_reified.py  test_linear_problem.py  test_linear_problem_highs.py  test_logic_precedence.py  test_mcp_modules.py  test_milp_equivalence.py  test_modelling_constructs.py  test_neq_and_logic_precedence.py  test_neq_rewrite_gurobi.py  test_neq_rewrite_scipy.py  test_problems.py  test_pyopl.py  test_pyopl_ide_more.py  test_pyopl_ide_typing.py  test_residual_semantic_shortcuts.py  test_scipy_codegen_csc_helpers.py  test_sum_of_comparisons.py  test_tuple_key_param.py  test_tuples.py  test_typed_string_set.py  test_typed_string_set_data.py  (+1 more)
tools/: README.md  (+5 more)
(+51 files in other folders)
