[project]
name = "rhetor"
version = "1.7.1"
description = "A Python library for parsing and solving OPL-like mathematical programming models using multiple solvers."
authors = [
  { name = "Roberto Rossi", email = "robros@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
license = { text = "MIT" }
dependencies = [
  "sly>=0.5",
  "numpy>=1.26",
  "scipy>=1.14",
  "gurobipy>=11.0",
  "highspy>=1.11",
  "Pillow>=10",
  "ttkbootstrap>=1.14",
  "platformdirs>=4.1",
  "openai>=1.99",
  "google-generativeai>=0.8.5",
  "google-genai>=1.0.0",
  "ollama>=0.6.0",
  "tensorflow>=2.16.2",
  "sentence-transformers>=5.1.1",
  "tf-keras>=2.16.0",
  "tiktoken>=0.12.0",
  "mcp>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/gwr3n/pyopl"

[tool.setuptools]
include-package-data = true

[project.scripts]
pyopl = "pyopl.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test", "test.*"]

[tool.setuptools.package-data]
pyopl = ["*.pyi", "icon/mindset.png", "grammars/*", "opl_models/*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312", "py313"]
exclude = '''
/(
  \.git
| \.venv
| venv
| build
| dist
)/
'''

[tool.flake8]
max-line-length = 300
extend-ignore = ["E203", "W503", "F811"]

[tool.ruff]
line-length = 300
target-version = "py39"

[tool.ruff.lint]
# Core Flake8 rules + import sorting
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"pyopl/pyopl_core.py" = ["F811"]
"test/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pyopl"]

[[tool.mypy.overrides]]
module = "pyopl.pyopl_ide_bootstrap"
disable_error_code = ["import-untyped"]